# lbfgs-cpp

./: .clang-format  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
bench/: CMakeLists.txt  core.cpp  core.hpp  main.cpp
example/: lbfgs.cpp  line_search.cpp  morethuente.h
include/: config.hpp  lbfgs.hpp  line_search.hpp
include/lbfgs/: config.hpp  lbfgs.hpp  line_search.hpp
src/: lbfgs.cpp
test/: CMakeLists.txt  test_lbfgs.cpp  test_line_search.cpp
